# hot-word-detection

./: .gitignore  README.md  cli.py  pyproject.toml
notebooks/: CNN_detector.ipynb  EDA.ipynb  data_preparation.ipynb
notebooks/.ipynb_checkpoints/: data_preparation-checkpoint.ipynb
src/: constants.py
src/model/: __init__.py  architecture.py  model.py
src/services/: __init__.py  audio_service.py  radio_service.py
src/utils/: __init__.py  logger.py
