[project]
name = "hot-word-detection"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "gtts>=2.5.4",
    "librosa>=0.10.0",
    "numpy>=1.22.0",
    "pydub>=0.25.0",
    "requests>=2.28.0",
    "soundfile>=0.12.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "pyttsx3>=2.99",
    "transformers==4.36.2",
    "tts==0.22.0",
]
